--- a/index.html
+++ b/index.html
@@ -44,7 +44,38 @@
           <img class="icon" src="images/hamburger icon.png" alt="open menu" />
         </button>
       </nav>
-      <div id="content"></div>
+      <div id="content">
+        <h1>HTML Element Reference</h1>
+        <div>
+          <button>&lt;Home</button>
+          <button>Next&gt;</button>
+        </div>
+        <hr />
+        <h2>HTML Tags Ordered Alphabetically</h2>
+        <input type="search" placeholder="Search..." />
+        <table>
+          <thead>
+            <tr>
+              <th>Tag</th>
+              <th>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>&lt;!--...--&gt;</td>
+              <td>Defines a comment</td>
+            </tr>
+            <tr>
+              <td>&lt;!docktype&gt;</td>
+              <td>Defines the document type</td>
+            </tr>
+          </tbody>
+        </table>
+        <div>
+          <button>&lt;Home</button>
+          <button>Next&gt;</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
