--- a/javascript/exercitii.html
+++ b/javascript/exercitii.html
@@ -65,7 +65,8 @@
       //>40 esti bolnav
       //grutate/(inaltime*inaltime)
       //La greutatea de 20kg si inaltimea de 1.73 esti subponderal
-
+      //greutate 30 si 250
+      //inaltime 1 si 2.2
       function indiceMasaCorporala(greutate, inaltime) {
         let imc = greutate / (inaltime * inaltime);
         let tip;
