--- a/crud/index.html
+++ b/crud/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRUD</title>
+    <style>
+      .hidden {
+        display: none;
+      }
+    </style>
     <script src="index.js"></script>
   </head>
   <body onload="draw();">
-    <form onsubmit="adauga(event);">
+    <form id="form" onsubmit="adauga(event);">
       <div><input type="text" placeholder="Title" name="title" /></div>
 
       <div><input type="text" placeholder="Url" name="url" /></div>
@@ -24,14 +29,19 @@
       </div>
       <div>
         <input type="text" placeholder="Tag" name="tags" />
-        <button id="addTagBtn" onclick="addTag(event);">+</button>
+        <button id="addTagBtn" onclick="event.preventDefault();addTag();">
+          +
+        </button>
       </div>
-      <input type="submit" value="Adauga" />
+      <input type="submit" value="Salveaza" />
+      <input type="button" value="Anuleaza" onclick="resetForm();" />
     </form>
-    <table border="1" style="border-collapse: collapse; width: 100%" id="list">
+    <table id="list" border="1" style="border-collapse: collapse; width: 100%">
       <thead>
         <tr>
-          <th style="width: 40%">Title</th>
+          <th style="width: 40%">
+            <button onclick="showForm();" style="float: left">+</button>Title
+          </th>
           <th style="width: 20%">Difficulty</th>
           <th>Tags</th>
           <th style="width: 100px"></th>
