--- a/crud/index.html
+++ b/crud/index.html
@@ -39,11 +39,17 @@
     <table id="list" border="1" style="border-collapse: collapse; width: 100%">
       <thead>
         <tr>
-          <th style="width: 40%">
+          <th style="width: 40%" onclick="sortTable(this,'title')">
             <button onclick="showForm();" style="float: left">+</button>Title
+            <span class="sortDirection"></span>
           </th>
-          <th style="width: 20%">Difficulty</th>
-          <th>Tags</th>
+          <th style="width: 20%" onclick="sortTable(this,'difficulty')">
+            Difficulty
+            <span class="sortDirection"></span>
+          </th>
+          <th onclick="sortTable(this,'tags')">
+            Tags<span class="sortDirection"></span>
+          </th>
           <th style="width: 100px"></th>
         </tr>
       </thead>
