--- a/crud/index.html
+++ b/crud/index.html
@@ -16,7 +16,7 @@
     </style>
     <script src="index.js"></script>
   </head>
-  <body onload="draw();">
+  <body onload="getData();">
     <form id="form" onsubmit="adauga(event);">
       <div><input type="text" placeholder="Title" name="title" /></div>
 
