--- a/var let.html
+++ b/var let.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script>
-      function a() {
+      function a(x) {
+        x = x ?? 5;
         var i;
         for (i = 0; i < 5; i++) {
           var f = 5;
