--- a/crud/index.html
+++ b/crud/index.html
@@ -17,7 +17,7 @@
     <script src="index.js"></script>
   </head>
   <body onload="getData();">
-    <form id="form" onsubmit="adauga(event);">
+    <form id="form" onsubmit="adauga(event);" class="hidden">
       <div><input type="text" placeholder="Title" name="title" /></div>
 
       <div><input type="text" placeholder="Url" name="url" /></div>
