--- a/demo-react/test.html
+++ b/demo-react/test.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script>
+      //day-month-year
+      //sort ascending
       let arr = [
         {
           data: "15-06-1985",
